--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,15 @@
 ---
-title: "Workshop Exercise: Emissions Data - Table, Map, and Chart"
+title: "Global CO2 Emissions"
 format: html
+author: Esther Mutuku
+execute:    
+    echo: false
 ---
+<!-- 
+
+## INITIALLY WHEN I RENDERED THE REPORT HAD ALL THE COMMENTS AND OUTPUTS THAT i DIN'T WANT INCLUDED IN THE FINAL REPORT SO I USED THIS CODE TO BLOCK THESE CHUNKS OF INSTRUCTIONS, COMMENTS AND CODE 
+
+ Workshop Exercise: Emissions Data - Table, Map, and Chart
 
 # Introduction
 
@@ -43,7 +51,8 @@ Load in your dataset from gapminder below. View it in your data viewer to get an
 
 ```{python}
 # Load the data
-emissions = pd.read_csv("DATA PATH HERE")
+emissions = pd.read_csv("data/co2_cons.csv")
+emissions
 ```
 
 # Initial Cleaning
@@ -83,16 +92,20 @@ Our goal is to create a table showing emissions for a few selected years and cal
 
 ```{python}
 # Subset the data to include `country`, `2000`, and `2022` columns only.
-table_df = 
+table_df = emissions[["country","2000","2022"]]
+table_df
 
 # Calculate absolute change as the difference between 2022 and 2000
-table_df["Absolute Change"] = 
+table_df["Absolute Change"] = table_df["2022"] - table_df["2000"]
+table_df
 
 # Calculate relative change as the absolute change divided by the 2000 emissions, then multiplied by 100
-table_df["Relative Change"] = 
+table_df["Relative Change"] = (table_df["Absolute Change"] / table_df["2000"]) * 100
+table_df
 
 # Round to 0 decimal places, and add a % sign to the relative change
 table_df["Relative Change"] = table_df["Relative Change"].round(0).astype(str) + "%"
+table_df
 ```
 
 Now we can display this as an interactive table with itables:
@@ -112,23 +125,42 @@ Our goal is to create a line chart from 1990 to 2022 for a few selected countrie
 
 ```{python}
 # Melt the dataset. Your id_vars should be "country", your var_name should be "year" and your value_name should be "emissions".
-emissions_long = 
+emissions_long = emissions.melt(
+    id_vars=["country"], var_name="year", value_name="emissions"
+)
+emissions_long
 
 # Convert year to numeric using pd.to_numeric
-emissions_long["year"] = 
+emissions_long["year"] = pd.to_numeric(emissions_long["year"])
+emissions_long
 
 # Convert emissions to numeric using pd.to_numeric. Here, we also convert dashes to the minus sign
-emissions_long["emissions"] = pd.to_numeric(emissions_long["emissions"].astype(str).str.replace("−", "-"))
+emissions_long["emissions"] = pd.to_numeric(
+    emissions_long["emissions"].astype(str).str.replace("−", "-")
+)
+emissions_long
 
 # Query for years between 1990 and 2022 (that is 1990, 1991, ..., 2021, 2022)
-emissions_long = 
+emissions_long_1990_2022 = emissions_long.query("year > 1989")
+emissions_long_1990_2022
+
 
 # Query for 5 countries (adjust these to any countries you like)
-emissions_long_subset = 
+
+emissions_long_subset = emissions_long_1990_2022.query(
+    'country == ("Tanzania","Kenya","Uganda","Burundi","Rwanda")'
+)
+emissions_long_subset
 
 # Create line chart. Year should be on the x-axis, emissions on the y-axis, and color should be by country.
-fig_chart = 
-
+fig_chart = px.line(
+    emissions_long_subset,
+    x="year",
+    y="emissions",
+    color="country",
+    title="CO2 Emissions for five East African countries (1990-2022)",
+)
+fig_chart
 ```
 
 
@@ -165,6 +197,10 @@ fig_map.show()
 # Final Tabset
 
 Below, we place our results into a tabbed interface.
+ 
+ -->
+
+This is a Quarto visualization report of Global CO2 emissions over time (1800-2022).The table shows emissions between 2000 and 2022 as well as the absolute and relative changes between these years, a line plot illustrates CO2 Emissions for five East African countries between 1990 and 2022 and a choropleth map showcases global CO2 Emissions between 1990 and 2022. This was done using the Gapminder dataset, Plotly, and itables.
 
 ::: {.panel-tabset}
 
@@ -188,6 +224,7 @@ fig_map.show()
 
 :::
 
+<!--
 # Deploying to GitHub Pages
-
-As a final step, you should follow the steps outlined in the prework to deplioy your report to GitHub Pages. You will be asked to share a link to your report in the course portal
+As a final step, you should follow the steps outlined in the prework to deploy your report to GitHub Pages. You will be asked to share a link to your report in the course portal
+-->
